# HousePricePredictor

./: .gitignore  README.md  main.py  params.yaml  pyproject.toml  requirements.txt  schema.yaml  template.py
artifacts/data_transformation/: test.csv  train.csv
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb
src/housePricePrediction/: __init__.py
src/housePricePrediction/components/: data_ingestion.py  data_transformation.py  data_validation.py
src/housePricePrediction/config/: configuration.py
src/housePricePrediction/entity/: config_entity.py
src/housePricePrediction/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py
src/housePricePrediction/utils/: common.py
