[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "housePricePrediction"
version = "0.0.0"
description = "A small python package for ML app"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Onkar Dongare", email = "dongareonkar2@gmail.com" }
]
maintainers = [
    { name = "Onkar Dongare", email = "dongareonkar2@gmail.com" }
]
keywords = ["machine-learning", "ML", "house-price-prediction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "pandas",
    # Add other dependencies here
]

[project.urls]
Homepage = "https://github.com/onkardongare/HousePricePreidictor"
Bug-Tracker = "https://github.com/onkardongare/HousePricePreidictor/issues"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["housePricePrediction"]